# agente_mercado

./: README.md  analise_mercado.ipynb  hello.py  pyproject.toml
