[project]
name = "agente-mercado"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crewai>=0.114.0",
    "crewai-tools>=0.40.1",
    "ipykernel>=6.29.5",
    "langchain-community>=0.3.21",
    "markdown>=3.8",
    "pdfkit>=1.0.0",
    "python-dotenv>=1.1.0",
    "ruff>=0.11.6",
    "jupyter>=1.1.1",
    "google-generativeai>=0.8.5",
    "langchain-google-genai>=2.0.10",
]
